<resources>
    <string name="app_name">Bullying App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="photo_from">Photo from: </string>
    <string name="titleMainOne">¿What is Bullying?</string>
    <string name="titleMainTwo">Kinds of Bullying</string>
    <string name="titleMainThree">Bullying History</string>
    <string name="titleMainFour">How can I detect it?</string>
    <string name="textMainOne">Jejejejejeje</string>
    <string name="textMainTwo">Jejejejejeje 2</string>
    <string name="textMainThree">Jejejejejeje 3</string>
    <string name="textMainFour">Jejejejejeje 4</string>
    <string name="link_one" translatable="false">https://www.flickr.com/photos/pimkie_fotos/2512997167</string>
    <string name="link_two">https://pixabay.com/en/shapes-actions-computer-symbol-27522/</string>
    <string name="link_three" translatable="false">http://darkobra.deviantart.com/art/Tango-History-Icon-163719409 </string>
    <string name="link_four" translatable="false">https://pixabay.com/en/magnifying-glass-science-searching-2833880/</string>
    <string name="justAPhoto">just a photo</string>
    <string name="home">Home</string>
    <string name="quiz">Quiz</string>
    <string name="stories">Stories</string>
    <string name="startQuizTitle">Do you want to start the Quiz?</string>
    <string name="startQuizText">You are going to start the quiz\n\nOnce you start it will be 20 Question that you have to respond according with your personal experience with you child\n\nPlease press Continue to Start the Quiz</string>
    <string name="continues">Continue</string>
    <string name="titleQuestion1">Question 1 of 20</string>
    <string name="titleQuestion2">Question 2 of 20</string>
    <string name="titleQuestion3">Question 3 of 20</string>
    <string name="titleQuestion4">Question 4 of 20</string>
    <string name="titleQuestion5">Question 5 of 20</string>
    <string name="titleQuestion6">Question 6 of 20</string>
    <string name="titleQuestion7">Question 7 of 20</string>
    <string name="titleQuestion8">Question 8 of 20</string>
    <string name="titleQuestion9">Question 9 of 20</string>
    <string name="titleQuestion10">Question 10 of 20</string>
    <string name="titleQuestion11">Question 11 of 20</string>
    <string name="titleQuestion12">Question 12 of 20</string>
    <string name="titleQuestion13">Question 13 of 20</string>
    <string name="titleQuestion14">Question 14 of 20</string>
    <string name="titleQuestion15">Question 15 of 20</string>
    <string name="titleQuestion16">Question 16 of 20</string>
    <string name="titleQuestion17">Question 17 of 20</string>
    <string name="titleQuestion18">Question 18 of 20</string>
    <string name="titleQuestion19">Question 19 of 20</string>
    <string name="titleQuestion20">Question 20 of 20</string>
    <string name="never">Never</string>
    <string name="sometimes">Sometimes</string>
    <string name="always">Always</string>
    <string name="next">Next</string>
    <string name="textQuestion1">How frequent is that your child don\'t want to go to school?</string>
    <string name="textQuestion2">Does your child stay at last to go out of the school?</string>
    <string name="textQuestion3">How frequent does your child change routes when he/she goes to school?</string>
    <string name="textQuestion4">Is frequent that your child cry or present physical pain?</string>
    <string name="textQuestion5">How often do you see your sad child or with mood swings?</string>
    <string name="textQuestion6">How common is your child showing anger?</string>
    <string name="textQuestion7">What is the frequency of seeing your child behaving in a somewhat childish way?</string>
    <string name="textQuestion8">How common is it to see that your child has nightmares, loss of appetite or vomiting?</string>
    <string name="textQuestion9">How common is it to see your child feign illness or discomfort to avoid going to school?</string>
    <string name="textQuestion10">Is it frequent that your child is anxious, nervous or with panic attacks?</string>
    <string name="textQuestion11">Is your child commonly seen with low self-esteem?</string>
    <string name="textQuestion12">How repetitive is it for your child to stay indoors?</string>
    <string name="textQuestion13">How often is it that your son joins with underage friends to him?</string>
    <string name="textQuestion14">Is it common to see low grades on your child\'s report card?</string>
    <string name="textQuestion15">How common is it to see your child with a lack of interest in the study?</string>
    <string name="textQuestion16">How often is it to see your child doing school work that is not of him/her</string>
    <string name="textQuestion17">Is it common for your child to ask for money without saying a reason?</string>
    <string name="textQuestion18">How frequent is it to see that your child shows signs of physical aggression?</string>
    <string name="textQuestion19">How often are personal objects missing from your child?</string>
    <string name="textQuestion20">How common is your child irritated by questions asked about the above?</string>
    <string name="result">Result:</string>
    <string name="recommendation">Recommendation:</string>
    <string name="bullying_percentage">Bullying percentage</string>
    <string name="finish">Finish</string>
    <string name="recommendation1">Your child is OK.\n\nYour child is not having any kind Bullying.\nHe/She is enjoying the school and trust in you.\nDo not loss your relation with him/her.</string>
    <string name="recommendation2">Your child is having strange behavior.\n\nThe result shows that your child is having a few acts that it seems that is passing through a little hard time.\nIt would be good if you pass sometime with him/her trying to looking if he/she is having some kind of bullying.</string>
    <string name="recommendation3">Your child is probably suffering bullying.\n\nIt seems that your child is presenting some aspects that shows that is suffering bullying.\nThe best action that you can take is go with an specialist (like a Psychologist) to detect if he/she is realliy suffering bullying.</string>
    <string name="recommendation4">YOUR CHILD IS SUFFERING BULLYING!\n\nCome on and go with an specialist to talk about of your child\'s behavior.\n It is important to go because it affects to much your child and it would probably happen something worst.</string>
    <string name="will">Will</string>
    <string name="willStory"> Hello. My name is Will. I am 14 year old hiker, runner, and boy scout and I was bullied as well. These bullies weren’t as bad as others but they did traumatize me.I have a disorder called Aspergers Syndrome. A minor form of Autism. I think differently from others and find it hard to be social. Since first grade. I have always been known as the nerd with his nerdy friends doing nerdy things. I could of been in the cool kid sports group but sports wasn’t really my thing. I loved video games and Youtube. I’ve had 2 very close friends who were twins. Karen, My best friend and Tarik, My 2nd best friend. Ever since I moved to my new school in 3rd grade. We met each other and had a close relationship. Our Semi popular group was made of 6 people. Me,Kaden,Tarik,Chase,Evan, and Dylan. I loved going to school to see them and even better, having the whole gang come over, play Minecraft, and eat pizza all night. But in 6th grade. That all changed. I was going through the change to adulthood and found different interests. I was done with Lego and Minecraft. But The others weren’t. Then one day. The group just wanted to ditch me right up in my face.I was heartbroken I didn’t know what to do. That was just the beginning. The group of 5 started to torment me. They knew about my Aspergers and used it to their advantage. They always played the same games I played at recess and always target me to get me out and find a way for me to lose. They called me terrible names. some curse words,some like Little Miss Boy Scout, Jerk, Stupid, Nerd and so on.They stole my lunch, ran away and chased me, and spread sexual rumors about me. I was driven to the point of insanity and when I got back from school one day I ran to my room and cried like crazy. My only source of friends, gone. I stayed in my room drowning in tears for what seemed like hours. I then decided to go on Minecraft to calm me down. I remember playing On Minecraft when Chase logged on, bragged about a sleepover that I wasn’t invited to, and said it was my fault. I then talked with my Mom she encouraged me to find a new group, With a few kids. My new best friend named Jaden. He Stood up to me when I was bullied and defended me. He invited me to play games and when Kaden and his group came to torment me, Jaden told them to screw off. I finally felt good knowing I had a real friend. I am now In 8th grade With new friends who like me for who I am. Kaden and Tarik moved to a different school. Chase tried to bully me in the beginning of 7th grade. But I got him out of the way. He now hangs out with a group of troublemakers. I barely see Evan and Dylan admitted his wrongdoing and we became band partners. Everything worked out great in the end and that is my story.</string>
    <string name="marisela">Marisela</string>
    <string name="mariselaHistory">Hi my name is Marisela. I was bullied from 1st all the way to 5th grade. I\'m in 11th grade now and i\'m now 17, so it was a long time ago. But the scars from all those years of bullying are still there. I was a very quiet and shy kid so i guess that made me an easy target and i was treated pretty much like dirt. I should also mention my dad passed away when i was 6 and on top of that i was being bullied. When i got a little older i became depressed a lot and i never knew why. By the time i was 15 i realized i was feeling so depressed because i hadn\'t gotten over being bullied and i realized that i need to come to terms with that in order to move on with my life. You have to forgive because if you live with this hatred in our heart all your doing is hurting yourself. Forgiveness doesn\'t make what that person did to you right, forgiveness is for you so that you can move on and be happy. This process of forgiveness is something i\'m still going through. I\'m over the bullying for the most part but as for the people who hurt me its gonna take longer for me to forgive them for that. From my experience i\'ve learned so much and its made me such a strong person. And i have to give a huge thanks to my family who love me unconditionally especially my mom she\'s everything to me. I\'ve come a long way and my life is doing pretty good right now. If your being bullied please stay strong because life has so much in store for you and you won\'t want to miss out on it.</string>
    <string name="curtis">Curtis</string>
</resources>