<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/normal_margin"
    tools:context=".ResultActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="@dimen/title_text"
        android:textStyle="bold"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bullying_percentage"
            android:textSize="@dimen/body_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Another text"
            android:textSize="@dimen/body_text"
            android:textStyle="italic"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:text="@string/recommendation"
        android:textSize="@dimen/title_text" />

    <TextView
        android:id="@+id/tv_recommendation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:textSize="@dimen/body_text"
        android:text="A long long text with the purpose of full the empty espace\nEven if i'\m writting\nWithout any notice of what I really want to write\nI like Areli\nanother more?\nSomething is happening here"
        android:gravity="center_vertical"/>

    <Button
        android:id="@+id/btn_finish"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/finish"
        android:textColor="@color/white"
        android:background="@color/colorAccent"
        android:elevation="4dp"/>




</LinearLayout>